--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@ body {
 }
 
 .banner-section {
-    /* background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%); */
-    /* background-image: url(images/donation11.jpg); */
-    background-color: bisque;
+    background-image: url(images/donation11.jpg);
+    background-size: cover;
+    /* background-image: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%); */
     background-repeat: no-repeat;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
+}
+
+.container {
+    width: 80%;
 }
 
 .banner-title {
@@ -22,19 +26,48 @@ body {
     font-size: 65px;
 }
 
-.banner-main a {
+.link-button {
+    text-decoration: none;
     background-color: tomato;
     color: white;
+    text-transform: uppercase;
+    font-weight: 700;
     padding: 12px 16px;
     border-radius: 5px;
 }
 
+.donation-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+}
+
 .donation-amount {
     display: flex;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 .amount-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #707070;
+    font-weight: 700;
+    font-size: 30px;
+    margin: 10px;
     background-color: #FAFAFA;
     Width: 135px;
     Height: 123px
+}
+
+input{
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 40px;
+    border:none;
+    border-bottom: 1px solid #DADADA;
+    outline: none;
+
 }
