--- a/style.css
+++ b/style.css
@@ -30,17 +30,19 @@ body {
     text-decoration: none;
     background-color: tomato;
     color: white;
+    cursor: pointer;
     text-transform: uppercase;
     font-weight: 700;
     padding: 12px 16px;
     border-radius: 5px;
 }
 
-.donation-section {
-    display: flex;
+.flexible-section {
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     width: 80%;
+    margin: 50px auto;
 }
 
 .donation-amount {
@@ -62,29 +64,59 @@ body {
     Height: 123px
 }
 
-input{
+input {
     width: 100%;
     padding: 20px;
     margin-bottom: 40px;
-    border:none;
+    border: none;
     border-bottom: 1px solid #DADADA;
     outline: none;
 }
 
-.plan-main{
+.plan-main {
     display: flex;
     justify-content: space-between;
 }
 
-.section-heading{
+.section-heading {
+    text-align: center;
     color: #121212;
     font-size: 45px;
     font-weight: 700;
 }
 
-.plan-items{
+.plan-items {
     background-color: rgba(79, 157, 166, 0.1);
     border-radius: 5px;
     margin: 10px;
     padding: 10px;
+}
+
+.input-field {
+    width: 809px;
+    height: 200px;
+    background-color: #FFF4D6;
+}
+
+.join-form{
+    width: 70%;
+    margin: 0 auto;
+
+}
+
+
+footer {
+    background-color: #0B0D17;
+    height: 177px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h1 {
+    color: tomato;
+}
+
+footer p {
+    color: white;
 }
